skins/larry/styles.css
/**
 * Roundcube webmail styles for skin "Larry"
 *
 * Copyright (c) 2012, The Roundcube Dev Team
 * Screendesign by FLINT / Büro für Gestaltung, bueroflint.com
 *
 * The contents are subject to the Creative Commons Attribution-ShareAlike
 * License. It is allowed to copy, distribute, transmit and to adapt the work
 * by keeping credits to the original autors in the README file.
 * See http://creativecommons.org/licenses/by-sa/3.0/ for details.
 *
 * $Id$
 */

body {
	font-family: "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
	font-size: 11px;
	color: #333;
	background: url(images/linen.jpg) repeat #d1d5d8;
	margin: 0;
}

body.noscroll {
	/* also avoids bounce effect in Chrome and Safari */
	overflow: hidden;
}

a {
	color: #0069a6;
}

a:visited {
	color: #0186ba;
}

img {
  border: 0;
}

input[type="text"],
input[type="password"],
textarea {
	margin: 0; /* Safari by default adds a margin */
	padding: 4px;
	border: 1px solid #b2b2b2;
	border-radius: 4px;
	box-shadow: inset 0 0 2px 1px rgba(0,0,0, 0.1);
	-moz-box-shadow: inset 0 0 2px 1px rgba(0,0,0, 0.1);
	-webkit-box-shadow: inset 0 0 2px 1px rgba(0,0,0, 0.1);
	-o-box-shadow: inset 0 0 2px 1px rgba(0,0,0, 0.1);
}

input[type="text"]:focus,
input[type="password"]:focus,
input.button:focus,
textarea:focus {
	border-color: #4787b1;
	box-shadow: 0 0 5px 2px rgba(71,135,177, 0.9);
	-moz-box-shadow: 0 0 5px 2px rgba(71,135,177, 0.9);
	-webkit-box-shadow: 0 0 5px 2px rgba(71,135,177, 0.9);
	-o-box-shadow: 0 0 5px 2px rgba(71,135,177, 0.9);
	outline: none;
}

input.placeholder,
textarea.placeholder {
	color: #aaa;
}

.bold {
	font-weight: bold;
}

/*** buttons ***/

input.button {
	display: inline-block;
	margin: 0 2px;
	padding: 2px 5px;
	color: #525252;
	text-shadow: 0px 1px 1px #fff;
	border: 1px solid #c0c0c0;
	border-radius: 4px;
	background: #f7f7f7;
	background: -moz-linear-gradient(top, #f9f9f9 0%, #e6e6e6 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f9f9f9), color-stop(100%,#e6e6e6));
	background: -o-linear-gradient(top, #f9f9f9 0%, #e6e6e6 100%);
	background: -ms-linear-gradient(top, #f9f9f9 0%, #e6e6e6 100%);
	background: linear-gradient(top, #f9f9f9 0%, #e6e6e6 100%);
	box-shadow: 0 1px 1px 0 rgba(140, 140, 140, 0.3);
	-o-box-shadow: 0 1px 1px 0 rgba(140, 140, 140, 0.3);
	-webkit-box-shadow: 0 1px 1px 0 rgba(140, 140, 140, 0.3);
	-moz-box-shadow: 0 1px 1px 0 rgba(140, 140, 140, 0.3);
	text-decoration: none;
	outline: none;
}

.formbuttons input.button {
	color: #ddd;
	font-size: 110%;
	text-shadow: 0px 1px 1px #333;
	padding: 4px 12px;
	border-color: #465864;
	border-radius: 5px;
	background: #7a7b7d;
	background: -moz-linear-gradient(top, #7b7b7b 0%, #606060 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#7b7b7b), color-stop(100%,#606060)); /* Chrome,Safari4+ */
	background: -o-linear-gradient(top, #7b7b7b 0%, #606060 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top, #7b7b7b 0%, #606060 100%); /* IE10+ */
	background: linear-gradient(top, #7b7b7b 0%, #606060 100%); /* W3C */
	box-shadow: 0 1px 1px 0 #ccc, inset 0 1px 0 0 #888;
	-o-box-shadow: 0 1px 1px 0 #ccc, inset 0 1px 0 0 #888;
	-webkit-box-shadow: 0 1px 1px 0 #ccc, inset 0 1px 0 0 #888;
	-moz-box-shadow: 0 1px 1px 0 #ccc, inset 0 1px 0 0 #888;
}

.formbuttons input.button:hover,
.formbuttons input.button:focus,
input.button.mainaction:hover,
input.button.mainaction:focus {
	color: #f2f2f2;
	border-color: #465864;
	box-shadow: 0 0 5px 2px rgba(71,135,177, 0.6), inset 0 1px 0 0 #888;
	-moz-box-shadow: 0 0 5px 2px rgba(71,135,177, 0.6), inset 0 1px 0 0 #888;
	-webkit-box-shadow: 0 0 5px 2px rgba(71,135,177, 0.6), inset 0 1px 0 0 #888;
	-o-box-shadow: 0 0 5px 2px rgba(71,135,177, 0.6), inset 0 1px 0 0 #888;
}

.formbuttons input.button:active {
	color: #fff;
	background: -moz-linear-gradient(top, #5c5c5c 0%, #7b7b7b 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5c5c5c), color-stop(100%,#7b7b7b));
	background: -o-linear-gradient(top, #5c5c5c 0%, #7b7b7b 100%);
	background: -ms-linear-gradient(top, #5c5c5c 0%, #7b7b7b 100%);
	background: linear-gradient(top, #5c5c5c 0%, #7b7b7b 100%);
}

input.button.mainaction {
	color: #ededed;
	text-shadow: 0px 1px 1px #333;
	border-color: #1f262c;
	background: #505050;
	background: -moz-linear-gradient(top, #505050 0%, #2a2e31 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#505050), color-stop(100%,#2a2e31));
	background: -o-linear-gradient(top, #505050 0%, #2a2e31 100%);
	background: -ms-linear-gradient(top, #505050 0%, #2a2e31 100%);
	background: linear-gradient(top, #505050 0%, #2a2e31 100%);
	box-shadow: inset 0 1px 0 0 #777;
	-moz-box-shadow: inset 0 1px 0 0 #777;
	-webkit-box-shadow: inset 0 1px 0 0 #777;
	-o-box-shadow: inset 0 1px 0 0 #777;
}

input.button.mainaction:active {
	color: #fff;
	background: #515151;
	background: -moz-linear-gradient(top, #2a2e31 0%, #505050 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#2a2e31), color-stop(100%,#505050));
	background: -o-linear-gradient(top, #2a2e31 0%, #505050 100%);
	background: -ms-linear-gradient(top, #2a2e31 0%, #505050 100%);
	background: linear-gradient(top, #2a2e31 0%, #505050 100%);
}

input.button[disabled],
input.button[disabled]:hover,
input.button.mainaction[disabled] {
	color: #aaa !important;
}

input.mainaction {
	font-weight: bold;
}
/* ... */

